# metal-llm-server

./: AGENTS.md  Cargo.toml  README.md  perf-improve.md  perf.todo.md
benchmarks/: EVAL_JUDGE_PROMPT.md  README.md  benchmark_hf_colab.py  benchmark_llamacpp_colab.py  benchmark_local.py  compare_outputs.py  concurrency_test.py  eval_outputs.json  eval_prompts.json  eval_run.py  local_outputs.json  mixed_batching_fairness.py  mtp_issue.txt  prefill_benchmark.py  prefill_correctness.py  prompts.json  reference_outputs.json  server_regression.py  stress_scheduler.py
docs/: 01_engine_overview.md  02_decode_path.md  03_tensor_shapes.md  04_kv_cache.md  05_quantization.md  06_metal_execution.md  08_bottleneck_analysis.md  ARCHITECTURE.md  BLOG.md  BLOG_GEMMA4.md  DEMO.md  DEMO_ROADMAP.md  TURBOQUANT.md
src/: batch_engine.rs  cache.rs  config.rs  decode_fused.rs  gemma4_assistant_config.rs  gemma4_assistant_model.rs  gemma4_config.rs  gemma4_gpu_model.rs  gemma4_mtp.rs  generation.rs  ggml_flash_attn.rs  ggml_flash_attn_ext.rs  ggml_gemv.rs  ggml_matmul.rs  gguf.rs  gpu.rs  gpu_model.rs  kv_persist.rs  kv_pool.rs  layers.rs  main.rs  mega_decode.rs  metrics.rs  model.rs  mtp_serve.rs  quantize.rs  sampling.rs  scheduler.rs  server.rs  speculative.rs  token_printer.rs  turboquant.rs  weights.rs
src/shaders/: decode_mega.metal  ggml_flash_attn.metal  ggml_flash_attn_ext.metal  ggml_mul_mm.metal  ggml_mul_mm_q4.metal  ggml_mul_mv_q4.metal  llama.metal  turboquant.metal
tools/: gguf_inspect.py  turboquant_needle.md  turboquant_needle.sh
ui/: brain.html  chat.py
(+2 files in other folders)
