[package]
name = "llama-sinks"
version = "0.1.0"
edition = "2021"
description = "Llama 3.2 inference with streaming attention sinks in Rust"

[dependencies]
ndarray = { version = "0.16", features = ["blas"] }
blas-src = { version = "0.10", features = ["accelerate"] }
memmap2 = "0.9"
metal = "0.30"
safetensors = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokenizers = { version = "0.21", default-features = false, features = ["progressbar", "onig"] }
rand = "0.8"
rand_distr = "0.4"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
